--- a/client/src/sass/components/_directory-tree.scss
+++ b/client/src/sass/components/_directory-tree.scss
@@ -214,6 +214,15 @@ $selection-toolbar--height: $spacing-unit * 1.5;
           }
         }
 
+        &--clipboard {
+          .icon {
+            fill: currentColor;
+            height: auto;
+            margin-top: 2px;
+            width: 12px;
+          }
+        }
+
         &:last-child {
           padding-right: 0;
         }
